k8s-api-objs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerfile-example
  labels:
    app: dockerfile-example
spec:
  selector:
    matchLabels:
      app: dockerfile-example
  template:
    metadata:
      labels:
        app: dockerfile-example
    spec:
      containers:
        - name: dockerfile-example
          image: image-registry.openshift-image-registry.svc:5000/test-elixir/dockerfile-example
          ports:
            - containerPort: 8080
  replicas: 1
  strategy:
    type: RollingUpdate
  paused: false
  revisionHistoryLimit: 5
  minReadySeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dockerfile-example
  name: dockerfile-example
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dockerfile-example
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dockerfile-example
    application: dockerfile-example
  name: dockerfile-example
spec:
  to:
    kind: Service
    name: dockerfile-example
    weight: 100
